--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -183,6 +183,6 @@
  <script>
     $(document).ready(function() {
         $('#notificationtable').DataTable();
-        $('#notificationtable_length').html('<p class="page-title">Notifications Items</p>');
+        $('#notificationtable_length').html('<p class="page-title">Notifications</p>');
     } );
     </script>
