--- a/signin.html
+++ b/signin.html
@@ -72,7 +72,17 @@
 
                                 <div class="form-group">
                                     <input class="form-control" placeholder="Store Name" name="store" type="text" value="">
-                                </div>                         
+                                </div>     
+                                <div class="form-group">
+                                        <div class="card card-outline-success">
+                                            <div class="card-body" style="padding: 2px;">
+                                                <blockquote class="card-bodyquote" >
+                                                    <p style="height: 80px; font-size: 0.8em;color:black; padding: 2px; overflow-y: scroll;">
+                                                    By logging into the LipaLater partners portal, you agree to abide by the terms of the LipaLater IT Security Policy. Access is limited to authorized services. Unauthorized access to or misuse of these services is prohibited and strictly monitored.</p>
+                                                </blockquote>
+                                            </div>
+                                        </div>
+                                    </div                    
                                                                
                                 
                                 <div class="checkbox">
